--- a/index.html
+++ b/index.html
@@ -903,8 +903,8 @@ function updateLockBadge() {
 ════════════════════════════════════════ */
 const SANCTIONS = [
   { v:'points',     e:'⬇', label:'Retrait de points',   cls:'stag-points',     units:['points'] },
-  { v:'prison',     e:'⛓', label:'Prison',              cls:'stag-prison',     units:['heures','jours','mois','ans'] },
-  { v:'garde',      e:'🔒', label:'Garde à vue',         cls:'stag-garde',      units:['heures','jours'] },
+  { v:'prison',     e:'⛓', label:'Prison',              cls:'stag-prison',     units:['minutes','heures','jours','mois','ans'] },
+  { v:'garde',      e:'🔒', label:'Garde à vue',         cls:'stag-garde',      units:['minutes','heures','jours'] },
   { v:'suspension', e:'🚫', label:'Suspension de permis',cls:'stag-suspension', units:['jours','semaines','mois','ans'] },
   { v:'permis',     e:'🗑', label:'Annulation permis',   cls:'stag-permis',     units:['mois','ans'] },
   { v:'autre',      e:'📌', label:'Autre sanction',      cls:'stag-autre',      units:[] },
